--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./images/main-bg.jpg');
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 code {
